[tool.poetry]
name = "pytorch-fid"
version = "0.3.0"
description = "Package for calculating Frechet Inception Distance (FID) using PyTorch"
authors = ["Max Seitzer <maximilian.seitzer@tuebingen.mpg.de>"]
license = "Apache Software License"
readme = "README.md"
repository = "https://github.com/mseitzer/pytorch-fid"
packages = [
    { include = "pytorch_fid", from = "src" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

[tool.poetry.urls]
Changelog = "https://github.com/mseitzer/pytorch-fid/blob/master/CHANGELOG.md"

[tool.poetry.scripts]
pytorch-fid = "pytorch_fid.__main__:main"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.13"
numpy = ">=1.16.5"
scipy = [
    { version = ">=1.7.0", python = "<3.12" },
    # Versions above 1.11.1 have bug with scipy.linalg.sqrtm, see
    # https://github.com/mseitzer/pytorch-fid/issues/103
    { version = ">=1.11.0,<=1.11.1", python = ">=3.12,<3.13" },
]
pillow = ">=6.2.1"
torch = { version = ">=1.4", source = "pytorch-cpu" }
torchvision = { version = ">=0.5.0", source = "pytorch-cpu" }

[tool.poetry.dev-dependencies]
black = ">=24.3.0"
flake8 = ">=7.0.0"
flake8-bugbear = ">=24.2.6"
isort = ">=5.11.2"
# Python 3.8 is supported up to 3.5
pre-commit = "<3.6"
pre-commit-hooks = ">=4.5.0"
pytest = ">=8.1.1"
pytest-mock = ">=3.12.0"
pyupgrade = ">=3.15.1"
nox = ">=2024.03.02"
nox-poetry = ">=1.0.3"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[tool.black]
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
